fixed spacing isssue

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   padding-top: 50%;
+  opacity: 0%;
 }
 .welcomeBanner {
   margin: 20px;
